--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Student Management System",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "backend": "nodemon server.js"
   },
   "keywords": [],
   "author": "Madawa De Silva",
